<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mda="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/reportLocation_activity_menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_bar_search"                
        mda:actionViewClass="com.mdareports.ui.general.CustomAdapterSearchView"
        mda:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/reportLocation_activity_menu_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/action_bar_save"
        mda:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/reportLocation_activity_menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_bar_delete"
        mda:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/reportLocation_activity_menu_sync"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/menu_refresh_data"
        mda:showAsAction="ifRoom|collapseActionView"/>

</menu>