<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.mdareports"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.mdareports.ui.custom.single.EditableSeekField
            android:id="@+id/esfieldPulse"
            style="@style/TechInfoContainer.EditableSeekField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:fieldLabel="@string/fragment_tech_info_pulse"
            custom:maxValue="@integer/max_pulse" />

        <com.mdareports.ui.custom.single.EditableSeekField
            android:id="@+id/esfieldBreath"
            style="@style/TechInfoContainer.EditableSeekField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:fieldLabel="@string/fragment_tech_info_breath"
            custom:maxValue="@integer/max_breath" />

        <com.mdareports.ui.custom.single.EditableSeekField
            android:id="@+id/esfieldSugar"
            style="@style/TechInfoContainer.EditableSeekField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:fieldLabel="@string/fragment_tech_info_sugar"
            custom:maxValue="@integer/max_sugar" />

        <com.mdareports.ui.custom.bloodpressure.BloodPressureField
            android:id="@+id/bloodPressureField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp" />
    </LinearLayout>

</ScrollView>